--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>별빛정원</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="javascript/jquery-1.12.3.js"></script>
+  <script src="javascript/script.js"></script>
+</head>
+<body>
+  <header>
+    <div class="top">
+      <div class="logo">
+        <a href="#">
+          <img src="images/logo.png" alt="로고">
+        </a>
+      </div>
+      <nav class="menu">
+        메뉴자리
+      </nav>
+    </div>
+  </header>
+  <div class="bodywarp">
+    <div class="contents">
+      <div id="banner">
+        배너자리
+      </div>
+      <div class="notice">
+        공지사항 자리
+      </div>
+      <div class="gallery">
+        갤러리 자리
+      </div>
+      <div id="shortcut">
+        바로가기 자리
+      </div>
+      <div class="imgslide">
+        이미지슬라이드 자리
+      </div>
+    </div>
+  </div>
+  <footer>
+    <div class="btlogo">
+      하단로고 자리
+    </div>
+    <div class="copy">
+      카피라이터 자리
+    </div>
+    <div class="sns">
+      sns 자리
+    </div>
+  </footer>
+</body>
+</html>
