--- a/index.html
+++ b/index.html
@@ -17,7 +17,44 @@
         </a>
       </div>
       <nav class="menu">
-        메뉴자리
+        <ul class="navi">
+          <li>
+            <a href="#">별빛정원 소개</a>
+            <ul class="submenu">
+              <li><a href="#">별빛정원 역사</a></li>
+              <li><a href="#">실내 시설</a></li>
+              <li><a href="#">야외 시설</a></li>
+              <li><a href="#">별빛 축제</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">프로그램 안내</a>
+            <ul class="submenu">
+              <li><a href="#">별빛 관람</a></li>
+              <li><a href="#">천문학 강연</a></li>
+              <li><a href="#">천체 망원경</a></li>
+              <li><a href="#">자연과학 교육</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">예약하기</a>
+            <ul class="submenu">
+              <li><a href="#">체험 가격</a></li>
+              <li><a href="#">개인 예약</a></li>
+              <li><a href="#">단체 예약</a></li>
+              <li><a href="#">예약 확인</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">문의사항</a>
+            <ul class="submenu">
+              <li><a href="#">오시는 길</a></li>
+              <li><a href="#">주차정보</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">문의하기</a></li>
+            </ul>
+          </li>
+        </ul>
       </nav>
     </div>
   </header>
