--- a/index.html
+++ b/index.html
@@ -61,31 +61,107 @@
   <div class="bodywarp">
     <div class="contents">
       <div id="banner">
-        배너자리
+        <a href="#">
+          <img src="images/banner.png" alt="배너">
+          <div class="bntext">
+            <h4>이달의 이벤트</h4>
+            모든 회원이 받을 수 있는 별빛정원의 이벤트를 확인해보세요!
+          </div>
+        </a>
       </div>
       <div class="notice">
-        공지사항 자리
+        <div class="tab"><h4>공지사항</h4></div>
+        <ul>
+          <li><a href="#">공지사항1 <span>2022.03.01</span></a></li>
+          <li><a href="#">공지사항2 <span>2022.03.01</span></a></li>
+          <li><a href="#">공지사항3 <span>2022.03.01</span></a></li>
+          <li><a href="#">공지사항4 <span>2022.03.01</span></a></li>
+        </ul>
       </div>
       <div class="gallery">
-        갤러리 자리
+        <div class="tab"><h4>갤러리</h4></div>
+        <ul>
+          <li>
+            <a href="#">
+              <img src="images/gallery1.jpg" alt="갤러리1">
+              <span>갤러리1</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="images/gallery2.jpg" alt="갤러리2">
+              <span>갤러리2</span>
+            </a>
+          </li>
+        </ul>
       </div>
       <div id="shortcut">
-        바로가기 자리
+        <a href="#">
+          <img src="images/shortcut1.jpg" alt="바로가기">
+        </a>
+        <a href="#">
+          <img src="images/shortcut2.jpg" alt="바로가기">
+        </a>
+        <a href="#">
+          <img src="images/shortcut3.jpg" alt="바로가기">
+        </a>
+        <a href="#">
+          <img src="images/shortcut1.jpg" alt="바로가기">
+        </a>
       </div>
-      <div class="imgslide">
-        이미지슬라이드 자리
+    </div>
+    <div class="imgslide">
+      <div class="slidelist">
+        <ul>
+          <li>
+            <a href="#">
+              <img src="images/img1.jpg" alt="이미지1">
+               <span>올해의 별 관측 행사</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="images/img2.jpg" alt="이미지2">
+               <span>별들과 함께 대화하는 시간</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="images/img3.jpg" alt="이미지3">
+               <span>아름다운 별빛의 향연</span>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
   <footer>
     <div class="btlogo">
-      하단로고 자리
+      <a href="#">
+        <img src="images/logo_bottom.png" alt="하단로고">
+      </a>
     </div>
     <div class="copy">
-      카피라이터 자리
+      COPYRIGHT (C) by WEBDISING. ALL RIGHTS RESERVED
     </div>
     <div class="sns">
-      sns 자리
+      <ul>
+        <li>
+          <a href="#">
+            <img src="images/sns1.jpg" alt="sns1">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="images/sns2.jpg" alt="sns2">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="images/sns3.jpg" alt="sns3">
+          </a>
+        </li>
+      </ul>
     </div>
   </footer>
 </body>
