--- a/index.html
+++ b/index.html
@@ -1,92 +1,122 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>별빛정원</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script src="javascript/script.js"></script>
-  <script src="javascript/jquery-1.12.3.js"></script>
-</head>
-<body>
-  <header>
-    <div class="top">
-      <div class="logo">
-        <a href="#">
-          <img src="images/logo.png" alt="로고">
-        </a>
-      </div>
-      <nav class="menu">
-        <ul class="navi">
-          <li>
-            <a href="#">별빛정원 소개</a>
-            <ul class="submenu">
-              <li><a href="#">별빛정원 역사</a></li>
-              <li><a href="#">실내 시설</a></li>
-              <li><a href="#">실외 시설</a></li>
-              <li><a href="#">별빛축제</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#">프로그램 안내</a>
-            <ul class="submenu">
-              <li><a href="#">별빛 관람</a></li>
-              <li><a href="#">천문학 강연</a></li>
-              <li><a href="#">천체 망원경</a></li>
-              <li><a href="#">자연과학 교육</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#">예약하기</a>
-            <ul class="submenu">
-              <li><a href="#">체험 가젹</a></li>
-              <li><a href="#">개인 예약</a></li>
-              <li><a href="#">단체 예약</a></li>
-              <li><a href="#">예약 확인</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#">문의사항</a>
-            <ul class="submenu">
-              <li><a href="#">오시는 길</a></li>
-              <li><a href="#">주차정보</a></li>
-              <li><a href="#">FAQ</a></li>
-              <li><a href="#">문의하기</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-<div class="bodywarp">
-  <div class="contents">
-    <div id="banner">
-      배너자리
-    </div>
-    <div class="notice">
-      공지사항 자리
-    </div>
-    <div class="gallery">
-      갤러리 자리
-    </div>
-    <div id="shortcut">
-      바로가기 자리
-    </div>
-  </div>
-  <div class="imgslide">
-    이미지 슬라이드 자리
-  </div>
-</div>
-<footer>
-  <div class="btlogo">
-    하단로고 자리
-  </div>
-  <div class="copy">
-    카피라이터 자리
-  </div>
-  <div class="sns">
-    sns 자리
-  </div>
-</footer>
-</body>
-</html>
+@charset "utf-8";
+/* CSS Document */
+
+* {
+  margin: 0 auto;
+  padding: 0;
+  list-style: none;
+  font-family: "맑은 고딕";
+  color: #333333;
+
+}
+body {
+  width: 100%;
+  height: 100vh;
+  min-width: 1000px; 
+  min-height: 820px; 
+  background-color: #ffffff;
+  font-size: 20px;
+}
+
+a {
+  text-decoration: none;
+  display: block;
+}
+
+header{
+  float: left;
+  background-color: #171c61;
+}
+
+.top{
+  float: left;
+  width: 200px;
+  height: calc(100vh - 100px);
+  min-height: 720px;
+}
+
+.logo{
+  float: left;
+  width: 200px;
+  height: 120px;
+  margin-top: 30px;
+}
+
+.logo img{
+  float: left;
+  width: 180px;
+  height: 100px;
+  margin-left: 10px;
+}
+
+.menu{
+  float: left;
+  width: 190px;
+}
+
+.bodywarp{
+  float: right;
+  width: calc(100% - 200px);
+  height: calc(100vh - 100px);
+  min-height: 720px;
+}
+
+.contents{
+  float: left;
+  width: 400px;
+  height: 100%;
+  background: bisque;
+}
+
+#banner{
+  width: 100%;
+  height: 130px;
+}
+
+.notice{
+  float: left;
+  width: 100%;
+  height: 200px;
+}
+
+.gallery{
+  float: left;
+  width: 100%;
+  height: 200px;
+}
+
+#shortcut{
+  float: left;
+  width: 100%;
+  height: 90px;
+}
+
+.imgslide{
+  float: right;
+  width: calc(100% - 400px);
+  height: 100%;
+}
+
+footer{
+  float: left;
+  width: 100%;
+  height: 100px;
+}
+
+.btlogo{
+  float: left;
+  width: 200px;
+  height: 100px;
+}
+
+.copy{
+  float: left;
+  width: calc(100% - 500px);
+  height: 100px;
+}
+
+.sns{
+  float: right;
+  width: 270px;
+  height: 100px;
+}
