--- a/index.html
+++ b/index.html
@@ -61,10 +61,21 @@
 <div class="bodywarp">
   <div class="contents">
     <div id="banner">
-      배너자리
+      <a href="#">
+        <img src="images/banner.png" alt="배너">
+        <div class="bntext">
+          <h4>이 달의 이벤트</h4>
+          모든 회원이 받을 수 있는 별빛정원의 이벤트를 확인해보세요.
+        </div>
+      </a>
     </div>
     <div class="notice">
-      공지사항 자리
+      <div class="tab"><h4>공지사항</h4></div>
+      <ul>
+        <li>
+          <a href="#">공지사항 1 </a>
+        </li>
+      </ul>
     </div>
     <div class="gallery">
       갤러리 자리
